# Whats-claude-MCP

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
whatsmcp/: __init__.py  claude_integration.py  config.py  gateway_client.py  main.py  webhook_server.py
